# dnrd

./: CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in  cygwin_post_install.sh
cmake/: generate_version.cmake
dnrd/: AUTHORS  ChangeLog  HISTORY  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  cygwin_post_install.sh  mkinstalldirs
dnrd/doc/: Makefile.am  Makefile.in  README-cache.in  README-master.in  README.cygwin  dnrd.8  dnrd.8.in
dnrd/src/: Makefile.am  Makefile.in  args.c  cache.c  cache.h  check.c  check.h  common.c  common.h  dns.c  dns.h  domnode.c  domnode.h  lib.c  lib.h  main.c  master.c  qid.c  query.c  query.h  rand.h  relay.c  relay.h  srvnode.c  srvnode.h  tcp.c  tcp.h  udp.c  udp.h
doc/: Makefile.am  Makefile.in  README-master.in  TODO  dnrd.8  dnrd.8.in  master.sample
src/: Makefile  Makefile.am  Makefile.in  args.c  build.h.in  cache.c  cache.h  check.c  check.h  common.c  common.h  dns.c  dns.h  domnode.c  domnode.h  lib.c  lib.h  main.c  master.c  qid.c  qid.h  query.c  query.h  relay.c  relay.h  sig.c  sig.h  srvnode.c  srvnode.h  tcp.c  udp.c  udp.h
www/: contact.php  dnrd.css  docs.php  download.php  footer.php  header.php  index.php  index2.php  links.php  manpage.php  menu.php
