dnl Process this file with autoconf to produce a configure script.
AC_INIT(dnrd, [2.13rc1], [dnrd-user@lists.sourceforge.net])
AC_CANONICAL_SYSTEM

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(dnrd,2.13rc1)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h syslog.h unistd.h)

dnl Check for pthread
AC_CHECK_HEADER(pthread.h)
   case $host_os in
     dnl BSD/OS and NetBSD require no special libraries or flags
     netbsd*|bsdi*) ;;
     freebsd4*) THREAD_CFLAGS="-pthread" ;;
     freebsd*) THREAD_LIBS="-lc_r" ;;
     linux*|openbsd*) THREAD_LIBS="-lpthread" ;;	
dnl other operating systems might fail because they have pthread.h but need
dnl special libs we don't know about yet.
   esac
AC_SUBST(THREAD_LIBS)
AC_SUBST(THREAD_CFLAGS)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strdup strerror strtoul strnlen usleep)

AC_CONFIG_FILES([Makefile
		src/Makefile
		doc/Makefile])
AC_OUTPUT()
