sbin_PROGRAMS = dnrd
dnrd_SOURCES = args.c args.h cache.c cache.h common.c common.h dns.c dns.h lib.c lib.h main.c master.c master.h query.c query.h relay.c relay.h sig.c sig.h tcp.c tcp.h udp.c udp.h srvnode.h srvnode.c domnode.c domnode.h standard.h rand.h rand.c qid.h qid.c check.c check.h
dnrd_LDADD = @THREAD_LIBS@
INCLUDES = @THREAD_CFLAGS@
